--- a/TreeSpotter/war/TreeSpotter.html
+++ b/TreeSpotter/war/TreeSpotter.html
@@ -7,30 +7,10 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
-    <!--                                                               -->
-    <!-- Consider inlining CSS to reduce the number of requested files -->
-    <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="TreeSpotter.css">
-
-    <!--                                           -->
-    <!-- Any title is fine                         -->
-    <!--                                           -->
-    <title>Web Application Starter Project</title>
-    
-    <!--                                           -->
-    <!-- This script loads your compiled module.   -->
-    <!-- If you add any GWT meta tags, they must   -->
-    <!-- be added before this line.                -->
-    <!--                                           -->
+    <title>Tree Spotter Project</title>
     <script type="text/javascript" language="javascript" src="treespotter/treespotter.nocache.js"></script>
   </head>
-
-  <!--                                           -->
-  <!-- The body can have arbitrary html, or      -->
-  <!-- you can leave the body empty if you want  -->
-  <!-- to create a completely dynamic UI.        -->
-  <!--                                           -->
   <body>
 
     <!-- OPTIONAL: include this if you want history support -->
@@ -43,20 +23,30 @@
         in order for this application to display correctly.
       </div>
     </noscript>
+    
+    <header></header>
+	<div id="button-bar">
+		<button id="home-button" class="nav-button">Home</button>
+		<button id="search-button" class="nav-button">Search</button>
+		<button id="about-button" class="nav-button">About</button>
+	</div>
 
-    <h1>Web Application Starter Project</h1>
+	<div id="main">
+		<div id="left-side">
+			<div id="main-search"></div>
+			<div id="content"></div>
+		</div>
+		<div  id="right-side">
+			<a id ="login-link" href="#">Log in</a> / <a id="logout-link" href="#">Log out</a>
+			<img src="image/oak-round.png" width="80%"/>
+			<button id="add-tree-button" class="side-button">Add a Tree!</button>
+			<p>Can't find your favourite tree? Improve the TreeSpotter
+				database by adding new trees.</p>
+			<a href="admin-page.html">
+				<button id="admin-button" class="side-button">Admin</button>
+			</a>
+		</div>
+	</div>
 
-    <table align="center">
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-    </table>
-  </body>
+</body>
 </html>
