Added some text for the home page so its not quite so barren, import button, UI tweaks

--- a/TreeSpotter/war/admin-page.html
+++ b/TreeSpotter/war/admin-page.html
@@ -10,7 +10,8 @@
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 
 	<h1> Admin Page </h1>
-	 This is the secret admin page. Shhhhhh!
+	
+	<a href="/treespotter/import">Import Data</a>
 
   </body>
 </html>
