styling is forthcoming! replaced sidebar with top bar, search with enter key, re-positioned things

--- a/TreeSpotter/war/TreeSpotter.html
+++ b/TreeSpotter/war/TreeSpotter.html
@@ -24,28 +24,20 @@
       </div>
     </noscript>
     
+    <div id="top">
+			<button id="add-tree-button">Add a Tree!</button>
+			<button id="admin-button" style="display:block">Admin</button>
+			<a href="#" id="login-link">Log in</a> / <a id="logout-link">Log out</a>
+    </div>
     <header></header>
 	<div id="button-bar">
 		<button id="home-button" class="nav-button">Home</button>
-		<button id="search-button" class="nav-button">Search</button>
-		<button id="about-button" class="nav-button">About</button>
+		<button id="search-button" class="nav-button" style="float: right;">Search</button>
 	</div>
 
 	<div id="main">
-		<div id="left-side">
-			<div id="main-search"></div>
-			<div id="content"></div>
-		</div>
-		<div  id="right-side">
-			<a id ="login-link" href="#">Log in</a> / <a id="logout-link" href="#">Log out</a>
-			<img src="image/oak-round.png" width="80%"/>
-			<button id="add-tree-button" class="side-button">Add a Tree!</button>
-			<p>Can't find your favourite tree? Improve the TreeSpotter
-				database by adding new trees.</p>
-			<a href="admin-page.html">
-				<button id="admin-button" class="side-button">Admin</button>
-			</a>
-		</div>
+		<div id="main-search"></div>
+		<div id="content"></div>
 	</div>
 
 </body>
