--- a/TreeSpotter/war/TreeSpotter.html
+++ b/TreeSpotter/war/TreeSpotter.html
@@ -26,8 +26,8 @@
     
     <div id="top">
 			<button id="add-tree-button">Add a Tree!</button>
-			<button id="admin-button" style="display:block">Admin</button>
-			<a href="#" id="login-link">Log in</a> / <a id="logout-link">Log out</a>
+			<a href="#" id="login-link">Log in</a> 
+			<button id="admin-button">Admin</button>
     </div>
     <header></header>
 	<div id="button-bar">
