Changed banner, button placement, fixed the Admin button, added link to Parks board, added loading bar

--- a/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
+++ b/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
@@ -8,3 +8,9 @@
 	to know. Want to find the tallest tree in Vancouver? Want to know how
 	many maple trees are downtown? Just use TreeSpotter to help you learn
 	more about the lovely trees in Vancouver.</p>
+
+<p>
+	The trees used in this database is provided by the <a
+		href="http://data.vancouver.ca/datacatalogue/streetTrees.htm">Vancouver
+		Parks Board</a>.
+</p>
