--- a/TreeSpotter/war/TreeSpotter.html
+++ b/TreeSpotter/war/TreeSpotter.html
@@ -27,12 +27,11 @@
     <div id="top">
 			<button id="add-tree-button">Add a Tree!</button>
 			<a href="#" id="login-link">Log in</a> 
-			<button id="admin-button">Admin</button>
     </div>
     <header></header>
 	<div id="button-bar">
 		<button id="home-button" class="nav-button">Home</button>
-		<button id="search-button" class="nav-button" style="float: right;">Search</button>
+		<button id="search-button" class="nav-button">Search</button>
 	</div>
 
 	<div id="main">
