Centred loading bar

--- a/TreeSpotter/src/com/cpsc310/treespotter/client/res/loadingbar.html
+++ b/TreeSpotter/src/com/cpsc310/treespotter/client/res/loadingbar.html
@@ -175,6 +175,7 @@ background-color:#FFFFFF;
 }
 
 </style>
+<center>
 <div id="fadingBarsG">
 <div id="fadingBarsG_1" class="fadingBarsG">
 </div>
@@ -193,3 +194,4 @@ background-color:#FFFFFF;
 <div id="fadingBarsG_8" class="fadingBarsG">
 </div>
 </div>
+</center>
