--- a/TreeSpotter/war/TreeSpotter.html
+++ b/TreeSpotter/war/TreeSpotter.html
@@ -4,9 +4,13 @@
 <!-- "Standards Mode". Replacing this declaration   -->
 <!-- with a "Quirks Mode" doctype is not supported. -->
 
-<html>
+<html xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="fb_title" content="Vancouver TreeSpotter" property="og:title"></meta>
+	<meta name="fb_url" content="http://kchen-cs310.appspot.com/TreeSpotter.html" property="og:url"></meta>
+	<meta name="fb_desc" content="Branch and diversify your knowledge of Vancouver trees!" property="og:description"></meta>
+	<meta name="fb_img" content="http://kchen-cs310.appspot.com/image/facebook.png" property="og:image"></meta>
     <link type="text/css" rel="stylesheet" href="TreeSpotter.css">
     <title>Tree Spotter Project</title>
     <script type="text/javascript" language="javascript" src="treespotter/treespotter.nocache.js"></script>
@@ -23,6 +27,15 @@
         in order for this application to display correctly.
       </div>
     </noscript>
+    
+    <div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=438492076225696";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
     
     <div id="top">
 			<button id="add-tree-button">Add a Tree!</button>
