Twitter share buttons and Facebook Like on home page. Null check for FB/Twitter script loading (finally!!)

--- a/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
+++ b/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
@@ -14,3 +14,12 @@
 		href="http://data.vancouver.ca/datacatalogue/streetTrees.htm">Vancouver
 		Parks Board</a>.
 </p>
+
+<p>
+	Like us on Facebook and Twitter!
+	<div id="facebook"></div>
+	<div id="twitter">
+		<a href="https://twitter.com/intent/tweet?button_hashtag=VancouverTreeSpotter" class="twitter-hashtag-button">Tweet #VancouverTreeSpotter</a>
+	</div><br>
+	<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23VancouverTreeSpotter"  data-widget-id="317175034097569792">Tweets about "#VancouverTreeSpotter"</a>
+</p>
