--- a/TreeSpotter/war/TreeSpotter.html
+++ b/TreeSpotter/war/TreeSpotter.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="fb_title" content="Vancouver TreeSpotter" property="og:title"></meta>
-	<meta name="fb_url" content="http://kchen-cs310.appspot.com/TreeSpotter.html" property="og:url"></meta>
+	<meta name="fb_url" content="http://kchen-cs310.appspot.com/" property="og:url"></meta>
 	<meta name="fb_desc" content="Branch and diversify your knowledge of Vancouver trees!" property="og:description"></meta>
 	<meta name="fb_img" content="http://kchen-cs310.appspot.com/image/facebook.png" property="og:image"></meta>
     <link type="text/css" rel="stylesheet" href="TreeSpotter.css">
@@ -36,6 +36,14 @@
 	  js.src = "//connect.facebook.net/en_US/all.js";
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
+	<script>(function(d,s,id) {
+	  var js,fjs=d.getElementsByTagName(s)[0];
+	  if(!d.getElementById(id)) {
+	  	js=d.createElement(s); js.id=id;
+	  	js.src="//platform.twitter.com/widgets.js";
+	  	fjs.parentNode.insertBefore(js,fjs);}
+	  }(document,"script","twitter-wjs");</script>
+
     
     <div id="top">
 			<button id="add-tree-button">Add a Tree!</button>
