--- a/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
+++ b/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
@@ -16,10 +16,12 @@
 </p>
 
 <p>
-	Like us on Facebook and Twitter!
+	Like us on Facebook, Twitter, or Google+!
 	<div id="facebook"></div>
 	<div id="twitter">
 		<a href="https://twitter.com/intent/tweet?button_hashtag=VancouverTreeSpotter" class="twitter-hashtag-button">Tweet #VancouverTreeSpotter</a>
-	</div><br>
+	</div>
+	<div id="google"></div>
+	<br>
 	<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23VancouverTreeSpotter"  data-widget-id="317175034097569792">Tweets about "#VancouverTreeSpotter"</a>
 </p>
