Changed OG tags for Facebook home page like to reference quadtreetest

--- a/TreeSpotter/war/TreeSpotter.html
+++ b/TreeSpotter/war/TreeSpotter.html
@@ -8,9 +8,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="fb_title" content="Vancouver TreeSpotter" property="og:title"></meta>
-	<meta name="fb_url" content="http://kchen-cs310.appspot.com/" property="og:url"></meta>
+	<meta name="fb_url" content="http://quadtreetest.appspot.com/" property="og:url"></meta>
 	<meta name="fb_desc" content="Branch and diversify your knowledge of Vancouver trees!" property="og:description"></meta>
-	<meta name="fb_img" content="http://kchen-cs310.appspot.com/image/facebook.png" property="og:image"></meta>
+	<meta name="fb_img" content="http://quadtreetest.appspot.com/image/facebook.png" property="og:image"></meta>
     <link type="text/css" rel="stylesheet" href="TreeSpotter.css">
     <title>Tree Spotter Project</title>
     <script type="text/javascript" language="javascript" src="treespotter/treespotter.nocache.js"></script>
