Fixed See Flagged Trees to show all of the flagged trees

--- a/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
+++ b/TreeSpotter/src/com/cpsc310/treespotter/client/res/home.html
@@ -1,13 +1,20 @@
+<style>
+.social {
+	display: inline-block;
+	margin: 10px 40px 20px 0px;
+}
+</style>
+
 <center>
 	<h1>Welcome to TreeSpotter!</h1>
 </center>
 
-<p style="line-height: 30px">The TreeSpotter project provides a searchable database of the
-	trees in Vancouver. Look up your favourite tree to find its species,
-	height, a map to its location, and everything else you could ever want
-	to know. Want to find the tallest tree in Vancouver? Want to know how
-	many maple trees are downtown? Just use TreeSpotter to help you learn
-	more about the lovely trees in Vancouver.</p>
+<p style="line-height: 30px">The TreeSpotter project provides a
+	searchable database of the trees in Vancouver. Look up your favourite
+	tree to find its species, height, a map to its location, and everything
+	else you could ever want to know. Want to find the tallest tree in
+	Vancouver? Want to know how many maple trees are downtown? Just use
+	TreeSpotter to help you learn more about the lovely trees in Vancouver.</p>
 
 <p>
 	The trees used in this database is provided by the <a
@@ -15,13 +22,17 @@
 		Parks Board</a>.
 </p>
 
-<p>
-	Like us on Facebook, Twitter, or Google+!
-	<div id="facebook"></div>
-	<div id="twitter">
-		<a href="https://twitter.com/intent/tweet?button_hashtag=VancouverTreeSpotter" class="twitter-hashtag-button">Tweet #VancouverTreeSpotter</a>
-	</div>
-	<div id="google"></div>
-	<br>
-	<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23VancouverTreeSpotter"  data-widget-id="317175034097569792">Tweets about "#VancouverTreeSpotter"</a>
+<p>Like us on Facebook, Twitter, or Google+!
+<div id="facebook" class="social"></div>
+<div id="twitter"  class="social">
+	<a
+		href="https://twitter.com/intent/tweet?button_hashtag=VancouverTreeSpotter"
+		class="twitter-hashtag-button">Tweet #VancouverTreeSpotter</a>
+</div>
+<div id="google"  class="social"></div>
+<br>
+<a class="twitter-timeline" data-dnt="true"
+	href="https://twitter.com/search?q=%23VancouverTreeSpotter"
+	data-widget-id="317175034097569792">Tweets about
+	"#VancouverTreeSpotter"</a>
 </p>
